--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pl">
-
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="style.css">
-	<title>Moja pierwsza strona</title>
+  <meta charset="UTF-8">
+  <title>Moja strona</title>
 </head>
-
 <body>
-
+  <h1>Witaj na mojej stronie!</h1>
+  <p>Działa 🎉</p>
 </body>
-
 </html>
